--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "crowdmanager",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.config.js ---hot"
-  },
-  "author": "K.T Motshoana",
-  "license": "ISC",
-  "dependencies": {
-    "solc": "^0.4.24",
-    "web3": "^1.3.1"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^4.5.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  }
+	"name": "crowdmanager",
+	"version": "1.0.0",
+	"description": "",
+	"main": "main.js",
+	"scripts": {
+		"tests": "mocha ./src/test",
+		"dev": "webpack-dev-server --config webpack.dev.config.js ---hot"
+	},
+	"author": "K.T Motshoana",
+	"license": "ISC",
+	"dependencies": {
+		"solc": "^0.4.24",
+		"web3": "^1.3.1"
+	},
+	"devDependencies": {
+		"html-webpack-plugin": "^4.5.0",
+		"mocha": "^8.2.1",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
+	}
 }
